# stackbuilder

./: Cargo.toml  README.md  build-all.sh  build-packages.sh  test-all.sh
.cargo/: config.toml  zig-cc.sh
.devcontainer/: devcontainer.json
.kilocode/rules/: rust-development-workflow.md
docs/: archlinux-packaging.md  build.md  config.md  packaging.md  testing-report.md  yaml-merger.md
examples/basic/: stackbuilder.toml  stackbuilder_custom.toml  stackbuilder_rust.toml  stackbuilder_test.toml
examples/basic/components/base/: .env.example  docker-compose.yml
examples/combo-only/: README.md  stackbuilder.toml
examples/combo-only/components/base/: docker-compose.yml
examples/complex/: stackbuilder.toml
examples/complex/components/base/: .env.example  docker-compose.yml
examples/custom-paths/: stackbuilder.toml
examples/custom-paths/custom-components/core/: docker-compose.yml
examples/custom-paths/custom-components/modules/: .gitkeep
examples/env-no-folder/: README.md  stackbuilder.toml
examples/env-no-folder/components/base/: docker-compose.yml
examples/error-cases/: README.md
examples/error-cases/invalid-toml/: README.md  stackbuilder.toml
examples/error-cases/invalid-yaml/: README.md  stackbuilder.toml
examples/error-cases/missing-base/: README.md  stackbuilder.toml
examples/error-cases/missing-base/components/: .gitkeep
examples/error-cases/missing-config/: README.md
examples/ext-only/: stackbuilder.toml
examples/ext-only/components/base/: docker-compose.yml
examples/legacy-combos/: README.md  stackbuilder.toml
examples/minimal/: README.md  stackbuilder.toml
examples/minimal/components/base/: docker-compose.yml
examples/multi-env-combo/: README.md  stackbuilder.toml
examples/named-combos/: README.md  stackbuilder.toml
examples/single-env/: stackbuilder.toml
examples/vector/: stackbuilder.toml
packaging/archlinux/: .SRCINFO  PKGBUILD
packaging/debian/: .gitignore
packaging/debian/debian/: changelog  control  copyright  rules
packaging/fedora/: .gitignore  stackbuilder.spec
src/: build.rs  build_cleaner.rs  config.rs  env_merger.rs  error.rs  file_copier.rs  init.rs  main.rs  merger.rs  yq_merger.rs
src/tests/: build_tests.rs  config_tests.rs  error_tests.rs  init_tests.rs  merger_tests.rs  mod.rs
(+64 files in other folders)
