[package]
name = "stackbuilder"
version = "0.1.0"
edition = "2021"
description = "A tool for building docker-compose files from modular components"
authors = ["Stackbuilder Team <team@stackbuilder.io>"]
license = "MIT"
repository = "https://github.com/stackbuilder/stackbuilder"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9.5"
anyhow = "1.0"
yaml-rust = "0.4"
thiserror = "2.0.16"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
