[package]
name = "stackbuilder"
version = "0.1.0"
edition = "2021"
description = "A powerful CLI tool for building Docker Compose files from modular components with multi-environment support and extension system"
authors = ["Zyrakq <serg.shehov@tutanota.com>"]
license = "MIT OR Apache-2.0"
license-file = "LICENSE-MIT"
repository = "https://github.com/zyrakq/stackbuilder"
homepage = "https://github.com/zyrakq/stackbuilder"
documentation = "https://github.com/zyrakq/stackbuilder/blob/main/README.md"
readme = "README.md"
keywords = ["docker", "compose", "devops", "cli", "modular"]
categories = ["command-line-utilities", "development-tools", "containerization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "docs/**/*",
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.9.5"
anyhow = "1.0"
yaml-rust2 = "0.10.3"
thiserror = "2.0.16"
glob = "0.3"
regex = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
